service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 8080
      targetPort: 8080
