route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-app
spec:
  to:
    kind: Service
    name: hello-app
  port:
    targetPort: http
